--- a/week_4-B.Rmd
+++ b/week_4-B.Rmd
@@ -8,6 +8,7 @@ knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
 library(readxl)
 library(janitor)
+library(cowplot)
 
 # As you can see, I have included my version of the `read_enrollment()`
 # function. Take a look! Is it similar to yours? Where does it differ? Note that
@@ -49,12 +50,46 @@ Let's continue working with the same enrollment data as Tuesday.  Recall the [of
 
 **Prompt:** Create a tibble named `classes` which includes the data from all five years in a "tidy" format. In addition to the variables produced by `read_enrollemnt()`, your tibble should include a variable named `year`.
 
+```{r sc1}
+d_2019 <- 
+  read_enrollment("raw_data/class_enrollment_summary_by_term_12.20.19.xlsx", 3)
+
+d_2018 <- 
+  read_enrollment("raw_data/class_enrollment_summary_by_term_10.24.18.xlsx", 2)
+
+d_2017 <- 
+  read_enrollment("raw_data/class_enrollment_summary_by_term_10.20.17.xlsx", 3)
+
+d_2016 <- 
+  read_enrollment("raw_data/class_enrollment_summary_by_term_fall_2016.xlsx", 0)
+
+d_2015 <- 
+  read_enrollment("raw_data/class_enrollment_summary_by_term_fall_2015.xlsx", 3)
+
+classes <- bind_rows(d_2015, d_2016, d_2017, d_2018, d_2019, .id = 'year') %>%
+  mutate(year = as.integer(year) + 2014)
+
+classes
+
+```
+
 
 
 ### Scene 2
 
 **Prompt:** Write a function called `big_classes()` whose first argument `x` requires a tibble, formatted like `classes`. It should return a tibble with the 5 highest enrollment classes in `x`. Once everyone in your group has that working, add a function argument called `my_year` which allows the user to pick a year for which she wants to know the biggest 5 courses.
 
+```{r sc2}
+big_classes <- function(x, my_year){
+  top <- x %>%
+         filter(year == my_year) %>%
+         arrange(desc(u_grad)) %>%
+         slice(1:5)
+  return(top)
+}
+big_classes(classes, 2018)
+
+```
 
 
 
@@ -65,9 +100,16 @@ Let's continue working with the same enrollment data as Tuesday.  Recall the [of
 * Create a tibble with a row for each year which includes a list-column named `q_enrollment` in which is stored the results of running `quantile()` on enrollment.
 
 
-
 * You now have a tibble with two columns: `year` and `q_enrollment`. Add another column called `mean_25_75` which is the average of the 25th and 75th percentiles. (You should look at `?quantile` to determine which elements in the list these are.) 
 
+```{r sc3}
+qscores <- classes %>%
+  group_by(year) %>%
+  summarise(q_enrollment = list(quantile(u_grad)), .groups = 'drop') %>%
+  mutate(mean_25_75 = map_dbl(q_enrollment, ~ (.[[2]] + .[[4]])/2))
+
+qscores$q_enrollment
+```
 
 
 
@@ -77,8 +119,15 @@ Let's continue working with the same enrollment data as Tuesday.  Recall the [of
 
 Each row in `my_plot` should be a histogram of the enrollment data for that year. Once you have created the object `plots`. Use `plot_grid()` from the **cowplot** package --- which you probably need to install --- to print out all the plots at once.
 
+```{r sc4}
+plots <- classes %>%
+  group_nest(year) %>%
+  mutate(my_plot = map(data, ~ggplot(., aes(x = u_grad)) + 
+                             geom_histogram(binwidth = 40, color = 'white') + 
+                             labs(x = 'Enrollment', y = 'Number')))
 
-
+plot_grid(plotlist = plots$my_plot)
+```
 
 ### Scene 5
 
